翻牌和音符跳动效果---

--- a/src/scss/_flip.scss
+++ b/src/scss/_flip.scss
@@ -6,6 +6,8 @@
 .cardCon{
     -webkit-perspective:500;
     -moz-perspective:500;
+    width: 200px;
+    height: 300px;
 }
 .flipCon{
     -webkit-transform-style: preserve-3d;
