一些测试代码====

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,3 +18,12 @@
         background-color: gray;
     }
 }
+
+//三角形
+.triangle{
+    width: 0px;
+    height: 0px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent green transparent;
+}
